opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_let"
bug-reports: "https://github.com/janestreet/ppx_let/issues"
dev-repo: "git+https://github.com/janestreet/ppx_let.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_let/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "base"
  "ppx_here"
  "dune"     {>= "2.0.0"}
  "ppxlib"   {>= "0.23.0"}
]
synopsis: "Monadic let-bindings"
description: "
Part of the Jane Street's PPX rewriters collection.
"
